--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea
+Code/esp8266SerialEcho/esp8266SerialEcho_ESP8266_ESP12_esp8266.bin
+Code/esp8266SerialEcho/test/test_AVR_NANO_atmega328p.hex
+Code/LaserPowerMonitor/LaserPowerMonitor_AVR_NANO_atmega328p.hex
